--- a/css/index.css
+++ b/css/index.css
@@ -1,30 +1,79 @@
-#navbar{
+body{
+    margin: 0px;
+}
+
+#navbar {
     display: flex;
     align-items: center;
-    position: sticky; 
+    position: relative;
     top: 0px;
     background-color: #FF597B;
     height: 70px;
+    
 }
-
-#logo{
-
-
-}
-#logo img{
+#navbar-logo img {
     height: 59px;
     margin: 3px 6px;
     border-radius: 30px;
     margin-left: 50px;
 }
-h1{
+
+h1 {
     color: white;
 }
 
-.search-bar{
-    background-color: aliceblue;
-    margin: 22px;
-    font-size: 20px;
-    margin-left: 110px;
-    border-radius: 10px;
+ .search-box {
+    flex: ;
+    position: relative;
 }
+
+.search-box input {
+    width: 130%;
+    height: 40px;
+    border: none;
+    outline: none;
+    background: #f2f2f2;
+    border-radius: 30px;
+    color: gray;
+    font-size: 16px;
+    padding-left: 5px;
+    padding-right: 40px;
+    text-align: center;
+    margin-left: 100px;
+
+}
+.nav-items{
+    text-decoration: none;
+    margin-left: 44px;
+    padding: 5px;
+    padding-left: 18px;
+    padding-right: 18px;
+    font-size: 25px;
+    color: white;
+    
+}
+.nav-items:hover{
+    background-color: #4d0000;
+    border-radius: 20px;
+    color:  #ffe6e6 ;
+}
+.nav-items-container{
+    margin-left: 300px;
+    width: 500px;
+}
+.categories-container{
+    
+    height: 80px;
+    position: relative;
+
+}
+.categories-items-container{
+    border: 1px solid #FF597B;
+    border-radius: 5px;
+    position: absolute;
+    height: 50px;
+    margin-top: 14px;
+    margin-left: 18px;
+    width: 1490px;
+}
+
