--- a/css/birthday.css
+++ b/css/birthday.css
@@ -2,9 +2,9 @@
 .birthday-gifts-title
 {
     margin-top: 10px;
-    font-size: 25px;
-    background-color: #F9B5D0;
-    color: black;
+    font-size: 30px;
+    background-color: #f5116c;
+    color: white;
     display: block;
     text-align: center;
     
@@ -16,14 +16,15 @@ margin-top: 25px;
 background-color: rgb(217, 242, 242);
 display: flex;
 flex-direction: row;
-justify-content:start;
+justify-content:space-evenly;
 align-items: center;
+margin: auto;
 
 }
 .birthday-img-container
 {
-    height: 400px;
-    width: 340px;
+    height: 450px;
+    width: 350px;
     border: solid 5px #FF597B;
     border-radius: 10px;
     box-shadow: #FF597B 3px;
@@ -38,31 +39,35 @@ align-items: center;
 }
 .images
 {
-height: 340px;
-width: 340px;
+height: 350px;
+width: 350px;
 }
 
 .gift-name
 {
-    font-size: 20px;
-    color: rgb(64, 2, 125);
-    background-color: #FF8E9E;
-    height: 30px;
+    
+    font-size: 27px;
+    color:white;
+    background-color:#f5116c;
+    height: 40px;
     text-align: center;
 }
 .BuyNow{
+    margin-top: 10px;
      margin-left: 100px;
      margin-right: 100px;
      border: black solid 3px;
-    font-size: 15px;
-    color: rgb(25, 24, 25);
-    background-color:white;
-    height: 20px;
+    font-size: 25px;
+    color: white;
+    background-color:#f75193;
+    height: 30px;
+    padding: auto;
     text-align: center;
     border-radius: 15px;
 }
 .BuyNow:hover{
     
-   background-color:rgb(248, 101, 101);
-   
+    box-shadow:2px 10px 10px 2px #6f6e6e;
+    background-color:white;
+    color:#f75193;
 }
