--- a/css/index.css
+++ b/css/index.css
@@ -62,11 +62,13 @@ h1 {
     color: white;
     font-family: 'Bree Serif', serif;
     
+    
 }
 .nav-items:hover{
     background-color: #4d0000;
     border-radius: 20px;
     color:  #ffe6e6 ;
+    transition: all 0.4s ease 0s;
 }
 .nav-items-container{
     margin-left: 300px;
@@ -204,6 +206,7 @@ unique-gift-text2{
  
  .trending-gifts-container{
   background-color: #f2f2f2;
+  height: 430px;
  }
 
  .trending-gifts-texts{
@@ -214,18 +217,93 @@ unique-gift-text2{
  
  .trending-gifts-text1{
     font-size: 40px;
+    font-family: 'Bree Serif', serif;
 
  }
  .trending-gifts-text2{
   font-size: 20px;
   color: gray;
+  font-family: 'Bree Serif', serif;
  }
   
  .same-day-delivery{
     margin-top: 22px;
     margin-left: 45px;
     font-size:20px;
+    font-family: 'Bree Serif', serif;
  }
- 
+ .trending-gifts-img-container{
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    height: 230px;
+    
+}
+.trending-gifts-img{
 
+    height: 220px;
+    width: 250px;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 20px;
+}
+
+.trending-gifts-text-container{
+    margin-top: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    height: 44px;
+    
+}
+.trending-gifts-text-container-text{
+    margin-top: 0px;
+    height: 20px;
+    width: 250px;
+    margin: 10px;
+    padding: 10px;
+   font-size: 20px;
+    text-align: center;
+    font-family: 'Bree Serif', serif;
+    
+    
+
+}
+
+.trending-gifts-img1{
+    margin-top: 55px;
+    height: 260px;
+    width: 265px;
+    margin: 4px;
+    padding: 10px;
+    border-radius:  30px 30px 0 0;
+}
+
+.trending-gifts-img1:hover{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    transition: all 0.4s ease 0s;
+}
  
+/* ROMANTIC GIFTS SECTION */
+ .romantic-gift-container{
+    margin-top: 30px;
+    height: 500px;
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+ }
+
+ .romantic-gift-container-img1{
+    margin-top: 30px;
+    height:460px ;
+    width: 700px;
+    border-radius: 20px 0 0 20px  ;
+
+ }
+ .romantic-gift-container-img2{
+    margin-top: 30px;
+    height:460px ;
+    width: 700px;
+    border-radius: 0 20px 20px 0;
+
+ }
