--- a/css/personalized.css
+++ b/css/personalized.css
@@ -4,30 +4,36 @@
 
 }
 
+
 .Personalized-Gift-container{
 
-  background-color: wheat;
+  background-color:;
   color:black;
-  height:270px;
-  width: 200px; 
-  margin:10px ;
+  height:430px;
+  width: 320px; 
+  margin:13px ;
   padding: 10px;
-  box-shadow: 3px 3px 1px 2px #ffcce0;           
+  background-color: aliceblue;
   border-radius: 10px;
-  border-style: double;
-  border-color:#e6005C;
+  box-shadow: 0 0 4px 3px rgba(226, 218, 218, 0.767);
+  /* border-color:#e6005C; */
   display: inline-block;
   font-size: 15px;
-  border-width: 2px;
   
 }
+/* .Personalized-Gift-container:hover{
+  border-radius: 30px;
+  transition: 0.1s;
+  box-shadow: 1px 1px 5px 4px #aa838b;
+} */
 
 .gift-images{
     
     display: block;
       border-radius: 5px;
       margin: auto;
-      height: 150px;
+      height: 300px;
+      width: ;
       
     
     }
@@ -41,25 +47,52 @@
       font-size: 18px;
     }
     .button{
-
+        width: 200px;
         background-color:#e6005c;
         color:white;
-        font-size: 15px;
-        padding: 5px;
+        font-size: 20px;
+        padding: 10px;
         border-radius: 5px;
         text-align: center;
-        margin: auto;
-        padding: auto;
-        font-weight: 3px;
         display: block;
-        width: max-content;
-        margin-bottom: 10px;
+        margin-left: 50px;
+        margin-bottom: 300px;
+        text-decoration: none;
         
       }
+      .button:hover{
+        background-color: #470720;
+        color: #eac6d4;
+        border-radius: 30px;
+      }
+      
 
     .heading{
-        text-align: center;
-        font-size: 30px;
+        margin-left: 40px;
+        font-size: 40px;
         color: white;
-        background-color: #e6005C;
+        background-color: #ff4d94;
+        width: 600px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        font-family: 'Bree Serif', serif;
+    }
+
+    .heading2{
+      margin-left: 40px;
+      font-size: 40px;
+      color: white;
+      background-color: #ff4d94;
+      width: 800px;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      font-family: 'Bree Serif', serif;
+  }
+
+    .Personalized-Gift-heading-container{
+      display: flex;
+        flex-direction: row;
+        justify-content: center;
     }
