edited in personalized.css page

--- a/css/personalized.css
+++ b/css/personalized.css
@@ -21,11 +21,13 @@
   font-size: 15px;
   
 }
-/* .Personalized-Gift-container:hover{
+
+
+.Personalized-Gift-container:hover{
   border-radius: 30px;
-  transition: 0.1s;
-  box-shadow: 1px 1px 5px 4px #aa838b;
-} */
+    transition: 0.5s;
+    box-shadow: 1px 1px 5px 4px #aa838b;
+} 
 
 .gift-images{
     
@@ -39,7 +41,7 @@
     }
     .gift-title{
         text-align: center;
-      font-size:15px;
+      font-size:20px;
     }
 
     .gift-price{
