--- a/css/birthday.css
+++ b/css/birthday.css
@@ -1,73 +1,101 @@
+.birthdaycontainer-holder{
+    background-color: white;
+    padding-left: 30px;
 
-.birthday-gifts-title
-{
-    margin-top: 10px;
-    font-size: 30px;
-    background-color: #f5116c;
-    color: white;
+}
+
+
+.birthday-Gift-container{
+  margin-left: 55px;
+  background-color:;
+  color:black;
+  height:440px;
+  width: 320px; 
+  margin:13px ;
+  padding: 10px;
+  background-color: aliceblue;
+  border-radius: 10px;
+  box-shadow: 0 0 4px 3px rgba(226, 218, 218, 0.767);
+  /* border-color:#e6005C; */
+  display: inline-block;
+  font-size: 15px;
+  
+}
+
+ .birthday-Gift-container:hover{
+  border-radius: 30px;
+  transition: 0.1s;
+  box-shadow: 1px 1px 5px 4px #aa838b;}
+
+
+
+
+.birthdaygift-images{
+    
     display: block;
-    text-align: center;
+      border-radius: 5px;
+      margin: auto;
+      height: 300px;
+      width: ;
+      
     
+    }
+    .birthdaygift-title{
+        text-align: center;
+      font-size:20px;
+    }
 
-}
-.birthday-container
-{
-margin-top: 25px;
-background-color: rgb(217, 242, 242);
-display: flex;
-flex-direction: row;
-justify-content:space-evenly;
-align-items: center;
-margin: auto;
+    .birthdaygift-price{
+        text-align: center;
+      font-size: 18px;
+    }
+    .birthdaybutton{
+        width: 200px;
+        background-color:#e6005c;
+        color:white;
+        font-size: 20px;
+        padding: 10px;
+        border-radius: 5px;
+        text-align: center;
+        display: block;
+        margin-left: 50px;
+        margin-bottom: 300px;
+        text-decoration: none;
+        
+      }
+      .birthdaybutton:hover{
+        background-color: #470720;
+        color: #eac6d4;
+        border-radius: 30px;
+      }
+      
 
-}
-.birthday-img-container
-{
-    height: 450px;
-    width: 350px;
-    border: solid 5px #FF597B;
-    border-radius: 10px;
-    box-shadow: #FF597B 3px;
-    margin: 15px;
-    cursor: pointer;
+    .birthdayheading{
+        margin-left: 40px;
+        font-size: 40px;
+        color: white;
+        background-color: #ff4d94;
+        width: 600px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        font-family: 'Bree Serif', serif;
+    }
 
-}
-.birthday-img-container:hover
-{
-    box-shadow:2px 10px 10px 2px #e82d53;
+    .birthdayheading2{
+      margin-left: 40px;
+      font-size: 40px;
+      color: white;
+      background-color: #ff4d94;
+      width: 800px;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      font-family: 'Bree Serif', serif;
+  }
 
-}
-.images
-{
-height: 350px;
-width: 350px;
-}
-
-.gift-name
-{
-    
-    font-size: 27px;
-    color:white;
-    background-color:#f5116c;
-    height: 40px;
-    text-align: center;
-}
-.BuyNow{
-    margin-top: 10px;
-     margin-left: 100px;
-     margin-right: 100px;
-     border: black solid 3px;
-    font-size: 25px;
-    color: white;
-    background-color:#f75193;
-    height: 30px;
-    padding: auto;
-    text-align: center;
-    border-radius: 15px;
-}
-.BuyNow:hover{
-    
-    box-shadow:2px 10px 10px 2px #6f6e6e;
-    background-color:white;
-    color:#f75193;
-}
+    .birthday-Gift-heading-container{
+      display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
