--- a/css/valentine.css
+++ b/css/valentine.css
@@ -1,6 +1,14 @@
-marquee{
+.mar-tag1{
     padding: 10px;
-    
+    margin-top: 40px;
+    background-color: rgb(209, 1, 56);
+    color: aliceblue;
+    font-size: 30px;
+    font-family: 'Times New Roman', Times, serif;
+}
+.mar-tag2{
+    padding: 10px;
+    margin-top: 10px;
     background-color: rgb(209, 1, 56);
     color: aliceblue;
     font-size: 30px;
@@ -15,20 +23,17 @@ marquee{
 
 } */
 #valentine{
-    
-    height: 600px;
-    
-
+    height: 470px;
 }
 
 #valentine::before{
     content: "";
     position: absolute;
-    background: url('./../images/send-love.jpg') no-repeat center center/cover;
+    background: url('./../images/valentine-gifts-online-1feb.jpg') no-repeat center center/cover;
     height: 60vh;
-    top:350px;
+    top:180px;
     left:0px;
-    
+    right: 0px;
     margin: 0px;
     width: 1490px;
     z-index: -1;
@@ -41,7 +46,6 @@ marquee{
     display: flex;
     justify-content: space-around;
 
-
 }
 .valentine-categories-card {
     background-color: #f4ebef;
@@ -49,7 +53,7 @@ marquee{
     width: 300px;
     margin: 40px;
     padding: 10px;
-
+    margin-top: 50px;
     border-radius: 15px;
     display: inline-block;
     box-shadow: 3px 3px 10px 3px;
@@ -118,7 +122,7 @@ marquee{
 
 .card-adjustment{
    height: 100vh;
-
+   margin-top: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
