--- a/css/Aboutus.css
+++ b/css/Aboutus.css
@@ -1,100 +1,100 @@
-h1{
+h1 {
     color: blueviolet;
 }
-body{
-    margin:0px;
+
+body {
+    margin: 0px;
     background-color: #ffe6e6;
 }
 
-.image
-{
-height:140px;
-width: 140px;
-border-radius: 50%;
-box-shadow: 0 0 4px 3px rgba(95, 94, 94, 0.767);
-align-items: center;
-border: 0.5px solid rgba(95, 94, 94, 0.767);;
-margin-top:20px;
+.image {
+    height: 140px;
+    width: 140px;
+    border-radius: 50%;
+    box-shadow: 0 0 4px 3px rgba(95, 94, 94, 0.767);
+    align-items: center;
+    border: 0.5px solid rgba(95, 94, 94, 0.767);
+    ;
+    margin-top: 20px;
 }
-.card1
-{
+
+.card1 {
     height: 420px;
-    width:320px;
+    width: 320px;
     box-shadow: 0 0 4px 3px rgba(226, 218, 218, 0.767);
     border-radius: 7px;
     margin: auto;
     text-align: center;
     transition: 0.5s ease-in-out;
-    margin-top:50px;
+    margin-top: 50px;
     background-color: aliceblue;
     color: #800000;
 }
-.name
-{
+
+.name {
     margin-left: auto;
     margin-right: auto;
     font-size: 20px;
 }
-.social-media-img
-{
-    height:40px;
+
+.social-media-img {
+    height: 40px;
     text-align: center;
     align-items: center;
 
     padding-top: 9px;
 }
-.social-contact li
-{
-    position: relative;
+
+.social-contact li {
+    /* position: relative; */
     display: inline-block;
     list-style: none;
     margin-right: 20px;
     margin-top: 17px;
     box-shadow: 0 0 3px 3px rgba(95, 94, 94, 0.767);
-    height:60px;
+    height: 60px;
     width: 60px;
     align-items: center;
     border-radius: 50px;
-    
-    
+
+
 
 }
-.social-contact li:hover
-{
-    background-color:#FF597B;
+
+.social-contact li:hover {
+    background-color: #FF597B;
     transition: 1s;
-    box-shadow:1px 1px 6px 5px rgb(127 59 177);
-    
+    box-shadow: 1px 1px 6px 5px rgb(127 59 177);
+
 }
-.card1:hover
-{
+
+.card1:hover {
     border-radius: 30px;
     transition: 0.1s;
     box-shadow: 1px 1px 5px 4px #aa838b;
 }
-.card-container
-{
+
+.card-container {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    
+
 }
-.heading
-{
+
+.heading {
     text-align: center;
     font-size: 45px;
     font-weight: bolder;
     color: #800000;
 }
-.info
-{
+
+.info {
     text-align: center;
     margin-left: 10px;
     margin-right: 10px;
 }
-.size
-{
-    height:130px;
-    width:130px;
-}
 
+.size {
+    height: 130px;
+    width: 130px;
+}
