--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fragment+Mono&display=swap');
 footer{
-    background-color: #576a88;
+    /* background-color: #576a88; */
+    background-color: black;
+    margin-top: 10px;
 }
 .footer-container-main{
     color: #ffffff;
