--- a/css/footer.css
+++ b/css/footer.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fragment+Mono&display=swap');
 footer{
     /* background-color: #576a88; */
-    background-color: black;
+    background-color:#4f6280 ;
     margin-top: 10px;
 }
 .footer-container-main{
