--- a/css/anniversary.css
+++ b/css/anniversary.css
@@ -2,7 +2,7 @@
     position:relative;
     display: block;
     height: 50px;
-    top:120px;
+    top: 10px;
     margin-top: 50px;
     text-align: center;
     background-color:#FF597B;
@@ -10,28 +10,22 @@
     font-size: 25px;
     font-family: cursive;
 }
-
 .anniversary-display-card-container{
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: row;
     flex-wrap: wrap;
     padding: 60px;
-   
-    align-items: center; 
+    align-items: space-between; 
     margin-top: 25px;
-    
     height: 400px;
     width: 340px;
-
-
 }
 .anniversary-container{
     background-color: rgb(252, 232, 232);
     height: 715px;
     width: auto;
-    margin-top: 100px;
-
+    margin-top: 40px;
     display:flex;
     justify-content: row;
     align-items: space-between;
@@ -41,7 +35,6 @@
     height: 665px;
     width: auto;
     margin-top: 30px;
-    /* margin-bottom: 70px; */
     display:flex;
     justify-content: row;
     align-items: space-between;
@@ -51,7 +44,6 @@
     height: 665px;
     width: auto;
     margin-top: 30px;
-    /* margin-bottom: 70px; */
     display:flex;
     justify-content: row;
     align-items: space-between;
@@ -61,18 +53,15 @@
     height: 665px;
     width: auto;
     margin-top: 30px;
-    /* margin-bottom: 70px; */
     display:flex;
     justify-content: row;
     align-items: space-between;
 }
 .anniversary-display-card-1{
     background-color: #ffff;
-
     border-radius: 20px;
     box-shadow: 0 0 5px 5px gray;
     border: 1px solid #dbd1d1;
-   
     height: 600px;
     width: 400px;
     
@@ -99,19 +88,17 @@
 }
 .anniversary-display-card-4{
     background-color: #ffff;
-
     border-radius: 20px;
     box-shadow: 0 0 5px 5px gray;
     border: 1px solid #dbd1d1;
-   margin-top: 30px;
-   margin-left: 50px;
+    margin-top: 30px;
+    margin-left: 50px;
     height: 600px;
     width: 400px;
     
 }
 .anniversary-display-card-5{
     background-color: #ffff;
-
     border-radius: 20px;
     box-shadow: 0 0 5px 5px gray;
     border: 1px solid #dbd1d1;
@@ -123,7 +110,6 @@
 }
 .anniversary-display-card-6{
     background-color: #ffff;
-
     border-radius: 20px;
     box-shadow: 0 0 5px 5px gray;
     border: 1px solid #dbd1d1;
@@ -134,7 +120,6 @@
 }
 .anniversary-display-card-7{
     background-color: #ffff;
-
     border-radius: 20px;
     box-shadow: 0 0 5px 5px gray;
     border: 1px solid #dbd1d1;
@@ -145,7 +130,6 @@
 }
 .anniversary-display-card-8{
     background-color: #ffff;
-
     border-radius: 20px;
     box-shadow: 0 0 5px 5px gray;
     border: 1px solid #dbd1d1;
@@ -156,7 +140,6 @@
 }
 .anniversary-display-card-9{
     background-color: #ffff;
-
     border-radius: 20px;
     box-shadow: 0 0 5px 5px gray;
     border: 1px solid #dbd1d1;
@@ -167,7 +150,6 @@
 }
 .anniversary-display-card-10{
     background-color: #ffff;
-
     border-radius: 20px;
     box-shadow: 0 0 5px 5px gray;
     border: 1px solid #dbd1d1;
@@ -178,7 +160,6 @@
 }
 .anniversary-display-card-11{
     background-color: #ffff;
-
     border-radius: 20px;
     box-shadow: 0 0 5px 5px gray;
     border: 1px solid #dbd1d1;
@@ -189,7 +170,6 @@
 }
 .anniversary-display-card-12{
     background-color: #ffff;
-
     border-radius: 20px;
     box-shadow: 0 0 5px 5px gray;
     border: 1px solid #dbd1d1;
@@ -261,7 +241,6 @@
 .anniversary-gifts-title:hover{
     color: #ffd519;
     background-color:violet;
-
 }
 .anniversary-container:hover{
     background-color: rgb(255, 231, 185);
@@ -283,14 +262,12 @@
 .anniversary-display-card-img-3{
     height: 350px;
     width: 387px;
-    border-radius: 15px;
-    
+    border-radius: 15px;   
 }
 .anniversary-display-card-img-6{
     height: 350px;
-    width: 387px;
-    border-radius: 15px;
-    
+    width: 400px; 
+    border-radius: 15px;   
 }
 
 .anniversary-display-card-title{
@@ -309,11 +286,10 @@
      border: 1px solid whitesmoke;
      padding: 10px;
      background-color: #FF597B;
-     border-radius: 10px;
-    
+     border-radius: 10px;   
 }
 .anniversary-display-card-button-3{
-    margin-top: 50px;
+     margin-top: 50px;
      margin-left: 100px;
      text-align: center;
      padding: 10px;
@@ -343,6 +319,5 @@
 .anniversary-desc{
  text-align: center;
  font-size: 12px;
-
 }
 
