--- a/css/anniversary.css
+++ b/css/anniversary.css
@@ -1,4 +1,4 @@
-.anniversary-gifts-title{
+/* .anniversary-gifts-title{
     position:relative;
     display: block;
     height: 50px;
@@ -41,7 +41,7 @@
     height: 665px;
     width: auto;
     margin-top: 30px;
-    /* margin-bottom: 70px; */
+    /* margin-bottom: 70px; 
     display:flex;
     justify-content: row;
     align-items: space-between;
@@ -51,7 +51,7 @@
     height: 665px;
     width: auto;
     margin-top: 30px;
-    /* margin-bottom: 70px; */
+    /* margin-bottom: 70px; 
     display:flex;
     justify-content: row;
     align-items: space-between;
@@ -61,7 +61,7 @@
     height: 665px;
     width: auto;
     margin-top: 30px;
-    /* margin-bottom: 70px; */
+    /* margin-bottom: 70px; 
     display:flex;
     justify-content: row;
     align-items: space-between;
@@ -344,5 +344,106 @@
  text-align: center;
  font-size: 12px;
 
+} 
+*/
+
+.container-holder{
+    background-color: white;
+    padding-left: 30px;
+
 }
 
+
+.Personalized-Gift-container{
+
+  background-color:;
+  color:black;
+  height:430px;
+  width: 320px; 
+  margin:13px ;
+  padding: 10px;
+  background-color: aliceblue;
+  border-radius: 10px;
+  box-shadow: 0 0 4px 3px rgba(226, 218, 218, 0.767);
+  /* border-color:#e6005C; */
+  display: inline-block;
+  font-size: 15px;
+  
+}
+
+
+.Personalized-Gift-container:hover{
+  border-radius: 30px;
+    transition: 0.5s;
+    box-shadow: 1px 1px 5px 4px #aa838b;
+} 
+
+.gift-images{
+    
+    display: block;
+      border-radius: 5px;
+      margin: auto;
+      height: 300px;
+      width: ;
+      
+    
+    }
+    .gift-title{
+        text-align: center;
+      font-size:20px;
+    }
+
+    .gift-price{
+        text-align: center;
+      font-size: 18px;
+    }
+    .button{
+        width: 200px;
+        background-color:#e6005c;
+        color:white;
+        font-size: 20px;
+        padding: 10px;
+        border-radius: 5px;
+        text-align: center;
+        display: block;
+        margin-left: 50px;
+        margin-bottom: 300px;
+        text-decoration: none;
+        
+      }
+      .button:hover{
+        background-color: #470720;
+        color: #eac6d4;
+        border-radius: 30px;
+      }
+      
+
+    .heading{
+        margin-left: 40px;
+        font-size: 40px;
+        color: white;
+        background-color: #ff4d94;
+        width: 720px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        font-family: 'Bree Serif', serif;
+    }
+
+    .heading2{
+      margin-left: 40px;
+      font-size: 40px;
+      color: white;
+      background-color: #ff4d94;
+      width: 800px;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      font-family: 'Bree Serif', serif;
+  }
+
+    .Personalized-Gift-heading-container{
+      display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
