footer section updated

--- a/css/footer.css
+++ b/css/footer.css
@@ -46,6 +46,11 @@ footer{
     align-items: center;
 }
 .footer-h1{
+    /* display: inline;
+    font-family: 'Roboto', sans-serif;
+    padding-left: 2px; 
+    border-bottom:5px solid orange; */
+
     display: inline;
     font-family: 'Roboto', sans-serif;
     padding-left: 2px; 
