--- a/css/personalized.css
+++ b/css/personalized.css
@@ -10,7 +10,7 @@
   background-color:;
   color:black;
   height:440px;
-  width: 320px; 
+  width: 305px; 
   margin:13px ;
   padding: 10px;
   background-color: aliceblue;
@@ -76,9 +76,7 @@
         color: white;
         background-color: #ff4d94;
         width: 600px;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
+        text-align: center;
         font-family: 'Bree Serif', serif;
     }
 
@@ -87,10 +85,8 @@
       font-size: 40px;
       color: white;
       background-color: #ff4d94;
-      width: 800px;
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
+      width: 750px;
+      text-align: center;
       font-family: 'Bree Serif', serif;
   }
 
@@ -98,4 +94,14 @@
       display: flex;
         flex-direction: row;
         justify-content: center;
+    }
+    .heading-3
+    {
+      margin-left: 40px;
+      font-size: 40px;
+      color: white;
+      background-color: #ff4d94;
+      width: 850px;
+      text-align: center;
+      font-family: 'Bree Serif', serif;
     }
