--- a/css/cakes.css
+++ b/css/cakes.css
@@ -1,17 +1,102 @@
-.item{
-    background-color: #fec4cc;
-    height: 330px;
-    width: 300px;
-    margin: 5px;
-    border-radius: 10px;
-    padding-top: 5px;
-    border: 2px solid #9370DB;
-  
+
+
+.container-holder{
+  background-color: white;
+  padding-left: 30px;
 
 }
-.conatiner{
+
+
+.Personalized-Gift-container{
+
+
+color:black;
+height:440px;
+width: 320px; 
+margin:13px ;
+padding: 10px;
+background-color: aliceblue;
+border-radius: 10px;
+box-shadow: 0 0 4px 3px rgba(226, 218, 218, 0.767);
+/* border-color:#e6005C; */
+display: inline-block;
+font-size: 15px;
+
+}
+
+
+
+.Personalized-Gift-container:hover{
+border-radius: 30px;
+transition: 0.1s;
+box-shadow: 1px 1px 5px 4px #aa838b;}
+
+
+
+
+.gift-images{
+  
+  display: block;
+    border-radius: 5px;
+    margin: auto;
+    height: 300px;
+   
+    
+  
+  }
+  .gift-title{
+      text-align: center;
+    font-size:20px;
+  }
+
+  .gift-price{
+      text-align: center;
+    font-size: 18px;
+  }
+  .button{
+      width: 200px;
+      background-color:#e6005c;
+      color:white;
+      font-size: 20px;
+      padding: 10px;
+      border-radius: 5px;
+      text-align: center;
+      display: block;
+      margin-left: 50px;
+      margin-bottom: 300px;
+      text-decoration: none;
+      
+    }
+    .button:hover{
+      background-color: #470720;
+      color: #eac6d4;
+      border-radius: 30px;
+    }
+    
+
+  .heading{
+      margin-left: 40px;
+      font-size: 40px;
+      color: white;
+      background-color: #ff4d94;
+      width: 600px;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      font-family: 'Bree Serif', serif;
+  }
+
+  .heading2{
+    margin-left: 40px;
+    font-size: 40px;
+    color: white;
+    background-color: #ff4d94;
+    width: 800px;
     display: flex;
     flex-direction: row;
+
+    justify-content: center;
+    font-family: 'Bree Serif', serif;
     justify-content: space-evenly;
     border-color: darkblue;
     box-sizing: content-box;
@@ -32,5 +117,12 @@ body{
   margin: 0px;
   text-align: center;
   padding-bottom: 40px;
+
 }
+
+  .Personalized-Gift-heading-container{
+    display: flex;
+      flex-direction: row;
+      justify-content: center;
+  }
 
