--- a/css/index.css
+++ b/css/index.css
@@ -12,8 +12,8 @@ body {
     height: 70px;
     margin: -5px;
     margin-top: -2px;
-    width: 1500px;
-    font-family: 'Bree Serif', serif;
+    width: 1500px; font-family: 'Bree Serif', serif;
+   
     position: sticky;
 
 }
